--- a/03_event.html
+++ b/03_event.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div{height: 150vh}
+        div{height: 150vh;background-color: red;}
     </style>
 </head>
 <body>
@@ -14,9 +14,12 @@
     <a href='#' id='link'> 클릭 </a>
 
     <input type="checkbox" id='apple'><label for="apple">사과</label>
-   <script>
-
-   
-   </script>
+    <script>
+        const link = document.querySelector('#link');
+         link.addEventListener('click', e =>{
+            console.log('링크 check');
+            e.preventDefault(); // 대상이 가지고 있는 기본값 방지 
+         })
+    </script>
 </body>
 </html>
