--- a/05_data.html
+++ b/05_data.html
@@ -7,9 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <img src='img/mario/icon03.png' alt='마리오' id='img' class='imgboxbox' data-num='0' data-name='img1'>
+    <img src='img/mario/icon03.png' alt='마리오' id='img' class='imgboxbox' data-num='0' data-name='이미지이름'>
     <script>
-      
+       const img = document.querySelector('#img');
+       const altTxt=img.getAttribute('alt')
+       const imgCng = img.setAttribute('src','img/mario/icon01.png')
+       const databox = img.getAttribute('data-num')
+       const databox2 = img.dataset.name;
+       console.log(altTxt)
+       console.log(databox)
+       console.log(databox2)
+       //getAttribute('해당속성명') 해당속성의 현재 값을 반환 
+       //setAttribute('해당속성명','새값') 해당속성의 값을 새값으로 다시 지정 
     </script>
 </body>
 </html>
