--- a/06_tab.html
+++ b/06_tab.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         @import url(css/reset.css);
-        .tab_area{width: 80%;margin: auto;margin: 50px auto;}
+        .tab_area{width: 80%;margin: 50px auto;}
         .tab_title{height: 40px;}
         .tab_list_box{display: flex;}
         .tab_list{width: 20%;height: 40px;text-align: center;line-height: 40px;}
@@ -18,9 +18,12 @@
             position: absolute;
             left:0;top:0;
             box-sizing: border-box;
-            background-color: #eee;
+            background-color: #eee; 
             padding: 50px;
+            display: none;
         }
+        .tab_content.on{display: block;}
+
     </style>
 </head>
 <body>
@@ -33,7 +36,7 @@
             </ul>
         </div><!-- //tab_title -->
         <div class='tab_content_container'>
-            <div class='tab_content'>
+            <div class='tab_content on'>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere esse reiciendis iste vero quam labore tenetur quia quos a aperiam at quisquam unde, reprehenderit maiores sapiente perspiciatis ducimus est amet dolores tempora nisi vitae vel. Ducimus hic consequuntur, ab deserunt architecto omnis, quis possimus obcaecati quod exercitationem, tenetur voluptatibus eos?
             </div>
             <div class='tab_content'>
@@ -45,8 +48,34 @@
         </div><!-- //tab_content_container -->
     </div>
     <script>
-       
+        const tabTitleBox = document.querySelector('.tab_list_box') // ul.tab_list_box 
+        const tabTitleList = document.querySelectorAll('.tab_list') // li.tab_list 노드리스트 
+        const tabContent = document.querySelectorAll('.tab_content') // div.tab_content 노드리스트
 
+        //이벤트 연결
+        tabTitleBox.addEventListener('click',e => {
+            const selectedList  = e.target ; 
+            let dataNum = selectedList.dataset.tabnum ; 
+            //console.log(dataNum)
+            tabTitleUpdate(selectedList);
+            tabContentUpdate(dataNum);
+        })
+
+        //제목 업데이트
+        function tabTitleUpdate(selectedList) {
+            tabTitleList.forEach((li) => {
+                li.classList.remove('tab_active')
+            })
+            selectedList.classList.add('tab_active')
+        }
+
+        //컨텐츠 내용 업데이트 
+        function tabContentUpdate(dataNum){
+            tabContent.forEach((ele) => {
+                ele.classList.remove('on');
+            })
+            tabContent[dataNum].classList.add('on')
+        }
 
     </script>
 </body>
