--- a/02_event.html
+++ b/02_event.html
@@ -29,7 +29,27 @@
         </div>
     </section>
     <script>
-       
+        const outerbox = document.querySelector('.outerbox')
+        const middlebox = document.querySelector('.middlebox')
+        const innerbox = document.querySelector('.innerbox')
+        outerbox.addEventListener('click',(e)=>{
+            if(e.target !== e.currentTarget) { 
+                return;
+            }
+            console.log(`${e.target}:${e.currentTarget} : outer`)
+        })
+        middlebox.addEventListener('click',(e)=>{
+            if(e.target !== e.currentTarget) { 
+                return;
+            }
+            console.log(`${e.target}:${e.currentTarget} : middle`)
+        })
+        innerbox.addEventListener('click',(e)=>{
+            if(e.target !== e.currentTarget) { 
+                return;
+            }
+            console.log(`${e.target}:${e.currentTarget} : inner`)
+        })
 
     </script>
 </body>
