--- a/06_tab-1.html
+++ b/06_tab-1.html
@@ -13,7 +13,6 @@
          .tabtitle a{width: 200px;height: 100px;font-size: 40px;line-height: 100px;color:#666;background: url(img/mario/pipe-white.png) no-repeat}
          .tabtitle a.on{background: url(img/mario/pipe.png) no-repeat}
          .tabImg{position: absolute;left:0;top:120px;display: none}
-        .tabImg:nth-child(1){display: block}
         .tabImg.on{display: block;}
 
     </style>
@@ -26,7 +25,7 @@
             <a href="#" data-num='2'>Toad</a>
         </div>
         <div class='tabcontainer'>
-            <div class='tabImg'><img src="img/mario/page01.png" alt=""></div>
+            <div class='tabImg on'><img src="img/mario/page01.png" alt=""></div>
             <div class='tabImg'><img src="img/mario/page02.png" alt=""></div>
             <div class='tabImg'><img src="img/mario/page03.png" alt=""></div>
         </div>
