--- a/text.html
+++ b/text.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <style>
         span{display: none;}
+        h1{color:red}
     </style>
 </head>
 <body>
@@ -15,7 +16,13 @@
        타이틀       태그
    </h1> 
    <script>
-     
+        const h1 = document.querySelector('h1') ;
+        const innerH = h1.innerHTML ; //innerHtml  html 을 그대로 읽어 온다. 
+        const innerT = h1.innerText //innerText 공백제거 텍스트만 불러온다. style 적용된걸 읽어온다. 
+        const textC = h1.textContent  //textContent  공백읽어오고  style 적용안되 html 요소만 없애고 읽어온다. 
+        console.log(innerH)
+        console.log(innerT) 
+        console.log(textC) 
    </script>
  
 </body>
